@startuml 4.2-module4-collaboration
!define LIGHTPURPLE #F3E5F5

skinparam backgroundColor white
skinparam defaultFontName Arial
skinparam defaultFontSize 11
skinparam linetype ortho
skinparam classAttributeIconSize 0
skinparam nodesep 80
skinparam ranksep 100

skinparam class {
  BackgroundColor LIGHTPURPLE
  BorderColor #7B1FA2
  BorderThickness 2
  ArrowColor #333333
  FontStyle bold
}

top to bottom direction

title Module 4: Collaboration Tools

class meetings <<table>> {
  **<color:gold>🔑 PK</color> id : INTEGER**
  --
  title : VARCHAR(255)
  description : TEXT
  <color:blue>🔗 FK</color> group_id : INTEGER
  <color:blue>🔗 FK</color> created_by : INTEGER
  scheduled_at : TIMESTAMP
  duration : INTEGER
  meeting_url : TEXT
  status : VARCHAR(20)
  notes : TEXT
  created_at : TIMESTAMP
}

class meeting_participants <<table>> {
  **<color:gold>🔑 PK</color> id : INTEGER**
  --
  <color:blue>🔗 FK</color> meeting_id : INTEGER
  <color:blue>🔗 FK</color> user_id : INTEGER
  status : VARCHAR(20)
  joined_at : TIMESTAMP
}

class chat_messages <<table>> {
  **<color:gold>🔑 PK</color> id : INTEGER**
  --
  <color:blue>🔗 FK</color> sender_id : INTEGER
  <color:blue>🔗 FK</color> group_id : INTEGER
  <color:blue>🔗 FK</color> class_id : INTEGER
  message : TEXT
  message_type : VARCHAR(20)
  file_url : TEXT
  is_read : BOOLEAN
  created_at : TIMESTAMP
}

class resources <<table>> {
  **<color:gold>🔑 PK</color> id : INTEGER**
  --
  title : VARCHAR(255)
  description : TEXT
  file_url : TEXT
  file_type : VARCHAR(50)
  file_size : INTEGER
  <color:blue>🔗 FK</color> uploaded_by : INTEGER
  <color:blue>🔗 FK</color> group_id : INTEGER
  <color:blue>🔗 FK</color> class_id : INTEGER
  created_at : TIMESTAMP
}

class whiteboard_sessions <<table>> {
  **<color:gold>🔑 PK</color> id : INTEGER**
  --
  <color:blue>🔗 FK</color> group_id : INTEGER
  session_name : VARCHAR(255)
  data : JSON
  last_updated : TIMESTAMP
  created_at : TIMESTAMP
}

class document_sessions <<table>> {
  **<color:gold>🔑 PK</color> id : INTEGER**
  --
  <color:blue>🔗 FK</color> group_id : INTEGER
  title : VARCHAR(255)
  content : TEXT
  last_updated : TIMESTAMP
  created_at : TIMESTAMP
}

' External references
class groups_external <<external>> {
  from Project module
}

class users_external <<external>> {
  from Users module
}

class classes_external <<external>> {
  from Academic module
}

' Relationships
meetings "*" -- "1" groups_external : scheduled for >
meetings "*" -- "1" users_external : created by >
meetings "1" o-- "0..*" meeting_participants : attended by >
meeting_participants "*" -- "1" users_external : participant >

chat_messages "*" -- "1" users_external : sent by >
chat_messages "*" -- "0..1" groups_external : in group >
chat_messages "*" -- "0..1" classes_external : in class >

resources "*" -- "1" users_external : uploaded by >
resources "*" -- "0..1" groups_external : for group >
resources "*" -- "0..1" classes_external : for class >

whiteboard_sessions "*" -- "1" groups_external : belongs to >
document_sessions "*" -- "1" groups_external : belongs to >

' Layout hints
meetings -[hidden]down-> meeting_participants
chat_messages -[hidden]down-> resources
resources -[hidden]down-> whiteboard_sessions
whiteboard_sessions -[hidden]right-> document_sessions

' Notes
note right of meetings
  **Virtual Meetings**
  
  • Zoom/Google Meet integration
  • Scheduled events
  • Status: SCHEDULED/IN_PROGRESS/
           COMPLETED/CANCELLED
  • Meeting notes and minutes
end note

note right of chat_messages
  **Real-time Chat**
  
  • Group chat or class chat
  • Message types:
    - TEXT
    - FILE
    - IMAGE
    - VIDEO
  • File attachments supported
  • Read receipts tracked
end note

note right of resources
  **File Management**
  
  • Documents, code, presentations
  • Cloudinary integration
  • Group or class level
  • File size tracking
  
  <b>Supported formats:</b>
  PDF, DOCX, XLSX, PPT, ZIP, etc.
end note

note bottom of whiteboard_sessions
  **Collaborative Whiteboard**
  
  • Real-time drawing/diagramming
  • JSON data storage
  • Multiple sessions per group
  • Version tracking via last_updated
end note

note bottom of document_sessions
  **Collaborative Documents**
  
  • Shared text editing
  • HTML/Markdown content
  • Real-time synchronization
  • Google Docs-like experience
end note

legend bottom right
  <b>Table Legend:</b>
  <color:gold>🔑</color> Primary Key
  <color:blue>🔗</color> Foreign Key
  
  <b>Collaboration Features:</b>
  • Video meetings
  • Real-time chat
  • File sharing
  • Whiteboard
  • Co-editing documents
  
  <b>Integration:</b>
  • Socket.IO (real-time)
  • Cloudinary (file storage)
  • Zoom/Google Meet (video)
end legend

@enduml
